--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blog.ivelthoven.nl",
-  "homepage": ".",
+  "homepage": "https://blog.ivelthoven.nl",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
